# freq-statespace

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
examples/: parWH.ipynb
examples/fine_steering_mirror/: fine_steering_mirror.ipynb
examples/nonlinear_benchmarks/: parallel_wiener_hammerstein.ipynb  silverbox_inference_and_learning.py  silverbox_neural_network.py
src/: _model_structures.py  _solve.py  basis_functions.py  best_linear_approximation.py  data_manager.py  frequency_response.py  full_optimization.py  inference_and_learning.py  misc.py  nonlinear_functions.py  training_data.py
src/freq_statespace/: __init__.py  _best_linear_approximation.py  _config.py  _data_manager.py  _frequency_response.py  _misc.py  _model_structure.py  _model_structures.py  _nonlin_lfr.py  _solve.py  bla.py  feature_map.py  nonlin_func.py  nonlin_lfr.py
src/freq_statespace/f_static/: _feature_maps.py  _nonlin_funcs.py
src/freq_statespace/static/: __init__.py  _feature_maps.py  _nonlin_funcs.py
